<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_height="match_parent"
    android:layout_width="match_parent">

<androidx.constraintlayout.widget.ConstraintLayout
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:padding="16dp"
    tools:context=".MainActivity">

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/text_layout"
        android:layout_width="160dp"
        android:layout_height="wrap_content"
        android:layout_margin="16dp"
        android:hint="@string/value_of_unit"
        app:layout_constraintStart_toEndOf="@id/length_icon_image"
        app:layout_constraintTop_toTopOf="parent">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/text_input_for_unit"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="numberDecimal" />
    </com.google.android.material.textfield.TextInputLayout>

    <ImageView
        android:id="@+id/length_icon_image"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:importantForAccessibility="no"
        app:layout_constraintBottom_toBottomOf="@id/text_layout"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@id/text_layout"
        app:srcCompat="@drawable/ic_length" />

    <ImageView
        android:id="@+id/Question_icon"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:importantForAccessibility="no"
        app:layout_constraintBottom_toBottomOf="@id/user_guide_text"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@id/user_guide_text"
        app:srcCompat="@drawable/ic_question" />

    <TextView
        android:id="@+id/user_guide_text"
        style="@style/Widget.UnitConverter.TextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="16dp"
        android:text="@string/select_unit_you_want_to_convert"
        app:layout_constraintStart_toEndOf="@id/Question_icon"
        app:layout_constraintTop_toBottomOf="@+id/text_layout" />

    <RadioGroup
        android:id="@+id/radio_group_for_unit"
        style="@style/Widget.UnitConverter.CompoundButton.RadioButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:checkedButton="@id/option_km_to_m"
        android:orientation="vertical"
        app:layout_constraintStart_toStartOf="@id/user_guide_text"
        app:layout_constraintTop_toBottomOf="@id/user_guide_text">

        <RadioButton
            android:id="@+id/option_km_to_m"
            style="@style/Widget.UnitConverter.CompoundButton.RadioButton"

            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/kilo_meter_to_meter"

            />

        <RadioButton
            android:id="@+id/option_m_to_km"
            style="@style/Widget.UnitConverter.CompoundButton.RadioButton"

            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/meter_to_kilo_meter" />

        <RadioButton
            android:id="@+id/option_m_to_cm"
            style="@style/Widget.UnitConverter.CompoundButton.RadioButton"

            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/meter_to_centimeter" />

        <RadioButton
            android:id="@+id/option_cm_to_m"
            style="@style/Widget.UnitConverter.CompoundButton.RadioButton"

            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/centimeter_to_meter"

            />

        <RadioButton
            android:id="@+id/option_cm_to_mm"
            style="@style/Widget.UnitConverter.CompoundButton.RadioButton"

            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/centimeter_to_millimeter"

            />

        <RadioButton
            android:id="@+id/option_mm_to_cm"
            style="@style/Widget.UnitConverter.CompoundButton.RadioButton"

            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/millimeter_to_centimeter"

            />


    </RadioGroup>

    <Button
        android:id="@+id/calculate_button"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginVertical="8dp"
        android:text="@string/calculate"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="@id/radio_group_for_unit"
        app:layout_constraintTop_toBottomOf="@id/radio_group_for_unit" />

    <TextView
        android:id="@+id/result_feild"
        style="@style/Widget.UnitConverter.TextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginVertical="8dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/calculate_button"
        tools:text="Please enter any value" />


</androidx.constraintlayout.widget.ConstraintLayout>

</ScrollView>